--- a/_navbar.yml
+++ b/_navbar.yml
@@ -6,6 +6,8 @@ left:
     href: ./book.html
   - text: "TIMESAT"
     href: ./timesat.html
+  - text: "QGIS"
+    href: ./qgis.html
 right:
   - icon: fa-github fa-lg
     href: https://github.com/fengtian2020/ess_course
